<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/seashell"
    tools:context=".Activities.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/user_name"
        android:layout_marginTop="40dp"
        android:autofillHints="username"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repassword"
        android:hint="@string/re_password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnsignup"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:layout_below="@+id/repassword"
        android:backgroundTint="@color/peach"
        android:layout_marginTop="100dp"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnlogin"
        android:text="@string/log_in"
        android:backgroundTint="@color/peach"
        android:layout_below="@+id/btnsignup" />

</RelativeLayout>