<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/seashell"
    tools:context=".ui.login.LoginActivity">

    <EditText
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:id="@+id/username_login"
        android:hint="@string/user_name"
        android:layout_marginTop="40dp"
        android:autofillHints="username"

        android:inputType="textPersonName" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:id="@+id/password_login"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/username_login"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in_now"
        android:layout_below="@+id/password_login"
        android:backgroundTint="@color/peach"
        android:layout_marginTop="100dp"/>

</RelativeLayout>