<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipes.PastacarbonaraFragment"
    android:id="@+id/fragment_container"
    android:background="@color/apricot">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_text"
                android:backgroundTint="@color/apricot"
                android:textStyle="italic"
                android:textSize="25sp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linear_layout"
                android:layout_below="@+id/title_text"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="save recipe"
                    android:id="@+id/save_recipe"
                    android:layout_margin="10dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="remove recipe"
                    android:id="@+id/remove_recipe"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pasta_carbonara_recipe_duration"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/linear_layout"
                android:layout_marginTop="10dp"
                android:text="TIME: 30min | SERVES: 4 people"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pasta_carbonara_recipe_intro"
                android:text="@string/pasta_carbonara_recipe_intro"
                android:padding="10dp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="10dp"
                android:textColor="@color/dark_gray"
                android:textSize="20sp"
                android:layout_below="@+id/pasta_carbonara_recipe_duration"
                android:background="@drawable/rounded_textview"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:id="@+id/pasta_carbonara_image"
                android:src="@drawable/pasta_carbonara_image"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/pasta_carbonara_image"
                android:background="@drawable/rounded_imageview"
                android:layout_below="@+id/pasta_carbonara_recipe_intro"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/ingredients_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAlignment="center"
                android:background="@drawable/rounded_textview_2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="Ingredients"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_below="@+id/pasta_carbonara_image"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:id="@+id/pasta_carbonara_ingredients"
                android:layout_below="@+id/ingredients_textview"
                android:text="@string/pasta_carbonara_ingredients"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_textview"/>

            <TextView
                android:id="@+id/instructions_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Instructions"
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_textview_2"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_below="@+id/pasta_carbonara_ingredients"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/pasta_carbonara_instructions"
                android:layout_below="@+id/instructions_textview"
                android:text="@string/pasta_carbonara_instructions"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:background="@drawable/rounded_textview"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>